rollout-test/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  labels:
    app: rollouts-demo
spec:
  replicas: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: rollouts-demo
          image: "alexmt/rollouts-demo:latest"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {}
